# opencl-matrix

./: CMakeLists.txt  README.md
libs/clew/: CMakeLists.txt
libs/utils/: CMakeLists.txt
src/: main.cpp  matrix_mult.cpp  matrix_mult.hpp
src/cl/: clion_defines.cl  naive.cl  with_tiles.cl
